service.yaml
apiVersion: v1
kind: Service
metadata:
  name: max-service
spec:
  selector:
    app: max-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: LoadBalancer
