ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: max-ingress
spec:
  rules:
  - host: max.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: max-service
            port:
              number: 80
